src/styles/globals.css
* {
  font-family: 'Source Sans Pro', sans-serif;
}

h1 {
  @apply text-5xl;
}
h2 {
  @apply text-4xl;
  @apply mb-8;
}
h3 {
  @apply text-3xl;
  @apply mb-8;
}
h4 {
  @apply text-2xl;
  @apply mb-8;
}
h5 {
  @apply text-xl;
  @apply mb-8;
}
h6 {
  @apply mb-8;
}

a:hover {
  @apply underline;
  text-decoration: underline;
  text-decoration-color: theme('colors.gold.900');
}

.custom-page p {
  @apply leading-loose;
  @apply mb-6;
}

.footnotes ol {
  list-style: decimal;
  list-style-position: inside;
}

.footnotes hr {
  border-color: theme('colors.gray.200');
}

.footnotes p {
  display: inline-block;
  margin-bottom: 0;
}

.highlight-line {
  background-color: #3b4252;
}

input:checked + #menu {
  @apply visible;
  @apply h-12;

  opacity: 1;
}

a.slide-logo {
  transform: translateX(calc(50% - 2.6em));
}

.styled-link {
  font-weight: 400;
  text-decoration-color: theme('colors.gold.900') !important;
}

.styled-link:hover > div {
  transform: translateX(var(--translate-x));
}

.styled-link-icon-container {
  vertical-align: middle;
  display: inline-block;
  transition: all 1s linear;
}

.social-share li {
  margin: 0 10px;
}

.social-share li a svg {
  transition: all 0.8s linear;
}

.social-share li a:hover {
  ${tw`hover:text-gray-600`}
}

.social-share a:hover svg {
  transform: scale(1.3, 1.3);
}

.post ul {
  @apply list-disc;
  @apply text-xl;
  @apply mb-8;

  list-style: inside;
}

.post ul li {
  @apply mb-2;
}

.post p {
  @apply mb-8;
  @apply text-xl;
}

.external-link {
  text-decoration-line: underline;
}

.social-share a svg {
  transition: all 0.8s linear;
}

.social-share a:hover svg {
  transform: scale(1.3, 1.3);
}

@tailwind components;

@tailwind utilities;

